--- a/src/app/marriageprofile/marriageprofile.component.css
+++ b/src/app/marriageprofile/marriageprofile.component.css
@@ -40,7 +40,12 @@ img.flower-icon {
     cursor: pointer;
 }
 
-
+@media only screen and (max-width: 600px) {
+    img.flower-icon {
+      max-width: 20px; /* Adjust based on your layout */
+      max-height: 10px;
+    }
+}   
 .family-content {
     margin: auto;
     background-color: #e0fffe;
