--- a/src/app/marriageprofile/marriageprofile.component.html
+++ b/src/app/marriageprofile/marriageprofile.component.html
@@ -56,7 +56,7 @@
     <p><b>छंद : </b>वाचन, सायकल चालवणे, नवीन गोष्टी शिकणे</p>
     <p><b>स्वारस्य : </b>विज्ञान, खेळ, प्रवास, स्वयं-शिक्षण</p>
     <p><b>आवडते संगीत : </b>जुनी मराठी आणि हिंदी गाणी</p>
-    <p><b>आवडते चित्रपट : </b>Advantures move</p>
+    <p><b>आवडते चित्रपट : </b>Advantures movies</p>
     <p><b>आवडते खेळ : </b>Cricket</p>
     <p><b>आवडता पदार्थ : </b>महाराष्ट्रीयन जीवन</p>
     <p><b>ड्रेस कोड  : </b>परिस्थितीवर आधारित</p>
