--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url('../src/assets/back_img.jpg');
+    opacity: 0.9;
+}
