adding images and look to page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img [src]="imagePath1" class="d-block w-100" alt="Loading...">
+      <div class="carousel-item active" data-bs-interval="2000">
+        <img [src]=imagePath1 class="d-block w-100" alt="Loading...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img [src]=imagePath2 class="d-block w-100" alt="Loading...">
