--- a/src/app/marriageprofile/marriageprofile.component.html
+++ b/src/app/marriageprofile/marriageprofile.component.html
@@ -2,12 +2,17 @@
 <div class="meinfo-content">
     <u><h3>माझ्याबद्दल माहिती</h3></u>
     <p>
-        नमस्कार, माझे नाव ओमकार आहे. माझे वय ३० वर्षे आहे आणि मी उलवे नवी मुंबई येथे राहतो.
+        नमस्कार, माझे नाव ओमकार आहे. माझे वय ३० वर्षे आहे आणि मी उलवे नवी मुंबई येथे राहतो.<br>
         माझा जन्म मुंबईत झाला आहे. आणि माझे बालपणही मुंबईतच गेले.
     </p>
     <p>
-        माझ्याकडे मुंबई विद्यापीठातून BscIT पदवी आहे. 
+        माझ्याकडे मुंबई विद्यापीठातून BscIT पदवी आहे.<br> 
         आणि मी CMSS मध्ये वरिष्ठ सॉफ्टवेअर अभियंता म्हणून काम करत आहे
+    </p>
+    <p>
+        कामाव्यतिरिक्त, मला वाचन, नवीन तंत्रज्ञान शिकण्यात मजा येते. <br>
+        वैयक्तिक आणि व्यावसायिक जीवनात समतोल राखण्यावर माझा विश्वास आहे<br>
+        आणि मी प्रियजनांसोबत घालवलेले क्षण जपतो.
     </p>
 </div>
 <br>
@@ -18,7 +23,7 @@
     <p><b>मूळ पत्ता </b><br>पो पडळी आले तालुका पारनेर जिल्हा अहमदनगर ४१४३०५.</p>
     <p><b>सध्याचा पत्ता</b><br>६०१, सी विंग शक्ती रेसिडेन्सी प्लॉट नं ६६ सेक्टर ५ उलवे नवी मुंबई ४१०२०६</p>
     <p><b>धर्म</b><br>हिंदू</p>
-    <p><img class="whatsapp-icon" [src]=whatsappPath alt="Loadding..." (click)="openwhastapp()"><b>संपर्क क्रमांक</b><br>८९२८२८५०७२</p>
+    <p><img class="whatsapp-icon" [src]=whatsappPath alt="Loadding..." (click)="openwhastapp()"><b>  संपर्क क्रमांक</b><br>८९२८२८५०७२</p>
 </div>
 <br>
 <div class="personal-content">
@@ -54,5 +59,11 @@
     <p><b>आवडते चित्रपट : </b>Advantures move</p>
     <p><b>आवडते खेळ : </b>Cricket</p>
     <p><b>आवडता पदार्थ : </b>महाराष्ट्रीयन जीवन</p>
-    <p><b>ड्रेस कोड  : </b> - </p>
+    <p><b>ड्रेस कोड  : </b>परिस्थितीवर आधारित</p>
+    <p>
+       माझे प्रोफाइल वाचण्यासाठी वेळ दिल्याबद्दल धन्यवाद.<br>
+       जर तुमचा विश्वास असेल की आपण एक चांगला match असू शकतो<br> 
+       किंवा माझ्याबद्दल अधिक जाणून घेऊ इच्छित असाल तर मोकळ्या मनाने संपर्क साधा.<br><br>
+       <img class="flower-icon" [src]=finImg alt=" ">मी तुम्हाला जाणून घेण्यासाठी आणि एका सुंदर प्रवासाकडे नेणाऱ्या अर्थपूर्ण कनेक्शनची शक्यता शोधण्यासाठी उत्सुक आहे.<img class="flower-icon" [src]=finImg alt=" ">
+    </p>
 </div>
