--- a/src/app/marriageprofile/marriageprofile.component.css
+++ b/src/app/marriageprofile/marriageprofile.component.css
@@ -6,31 +6,38 @@ h3 {
     margin: auto;
     background-color: #e0fffe;
     width: 90%;
-    height: 80%;
     justify-content: center;
     align-content: center;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10%;
+    border-radius: 20%;
     padding: 6%;
-    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .meinfo-content p {
     font-size: clamp(9px, 2vw, 17px);
-    line-height: 1;
+    line-height: 1.5;
     text-align: center;
     word-break: break-word;
 }
 
-img whatsapp-icon {
-    width: 24px;
-    height:30px;
+
+img.whatsapp-icon {
+    width: 40px;
+    height: 33px;
+    border-radius: 100%;
     cursor: pointer;
 }
 
-img whatsapp-icon :hover {
-    opacity: 0.8;
+img.whatsapp-icon :hover {
+    opacity: 0.10;
+}
+
+img.flower-icon {
+    width: 100px;
+    height: 83px;
+    border-radius: 100%;
+    cursor: pointer;
 }
 
 
@@ -42,7 +49,7 @@ img whatsapp-icon :hover {
     justify-content: center;
     align-content: center;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10%;
+    border-radius: 20%;
     padding: 6%;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -50,7 +57,7 @@ img whatsapp-icon :hover {
 
 .family-content p {
     font-size: clamp(9px, 2vw, 17px);
-    line-height: 1;
+    line-height: 1.5;
     text-align: center;
     word-break: break-word;
 }
@@ -63,7 +70,7 @@ img whatsapp-icon :hover {
     justify-content: center;
     align-content: center;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10%;
+    border-radius: 20%;
     padding: 6%;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -84,7 +91,7 @@ img whatsapp-icon :hover {
     justify-content: center;
     align-content: center;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10%;
+    border-radius: 20%;
     padding: 6%;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -106,7 +113,7 @@ img whatsapp-icon :hover {
     justify-content: center;
     align-content: center;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 10%;
+    border-radius: 20%;
     padding: 6%;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -114,7 +121,7 @@ img whatsapp-icon :hover {
 
 .favorites-content p {
     font-size: clamp(9px, 2vw, 17px);
-    line-height: 1;
+    line-height: 1.5;
     text-align: center;
     word-break: break-word;
 }
