--- a/src/app/marriageprofile/marriageprofile.component.html
+++ b/src/app/marriageprofile/marriageprofile.component.html
@@ -45,9 +45,10 @@
     <p><b>रास : </b>मकर</p>
     <p><b>नाडी : </b>अंत्या</p>
     <p><b>नक्षत्र : </b>श्रावण</p>
+    <p><b>जन्मतारीख : </b>५ जुलै १९९३</p>
+    <p><b>जन्मस्थान : </b>मुंबई</p>
     <p><b>जन्म तास : </b>२१ तास</p>
     <p><b>जन्म मिनिटे : </b>३३ मिनिटे</p>
-    <p><b>जन्मस्थान : </b>मुंबई</p>
     <p><b>रक्त गट  : </b>B+</p>
 </div>
 <br>
@@ -58,7 +59,7 @@
     <p><b>आवडते संगीत : </b>जुनी मराठी आणि हिंदी गाणी</p>
     <p><b>आवडते चित्रपट : </b>Advantures movies</p>
     <p><b>आवडते खेळ : </b>Cricket</p>
-    <p><b>आवडता पदार्थ : </b>महाराष्ट्रीयन जीवन</p>
+    <p><b>आवडता पदार्थ : </b>महाराष्ट्रीयन जेवण</p>
     <p><b>ड्रेस कोड  : </b>परिस्थितीवर आधारित</p>
     <p>
        माझे प्रोफाइल वाचण्यासाठी वेळ दिल्याबद्दल धन्यवाद.<br>
