few New Changes

--- a/src/app/marriageprofile/marriageprofile.component.html
+++ b/src/app/marriageprofile/marriageprofile.component.html
@@ -20,26 +20,30 @@
     <u><h3>कौटुंबिक माहिती</h3></u>
     <p><b>वडीलांचे नाव</b><br>तुकाराम अनंथा डेरे</p>
     <p><b>आईचे नाव</b><br>शांता तुकाराम डेरे</p>
-    <p><b>मूळ पत्ता </b><br>पो पडळी आले तालुका पारनेर जिल्हा अहमदनगर ४१४३०५.</p>
+    <p><b>मूळ पत्ता </b><br>पो पाडळी आळे तालुका पारनेर जिल्हा अहमदनगर ४१४३०५.</p>
     <p><b>सध्याचा पत्ता</b><br>६०१, सी विंग शक्ती रेसिडेन्सी प्लॉट नं ६६ सेक्टर ५ उलवे नवी मुंबई ४१०२०६</p>
     <p><b>धर्म</b><br>हिंदू</p>
-    <p><b>मामा</b><br>शिवाजी गेनभाऊ गाडगे (निमगाव सावा, शिवमाळ)<br>दत्तात्रय गेनभाऊ गाडगे (निमगाव सावा, शिवमाळ)</p>
-    <p><b>नातेवाईक</b><br>भोर, गाडगे, बेलोटे, थोरात, चौधरी, हाडवळे, आतकरी, गुंजाळ, शिरोळे, नरवडे, निचित, औटी, अवारी</p>
+    <p><b>मामा</b><br>शिवाजी गेनभाऊ गाडगे (निमगाव सावा, पाईनमळा)<br>दत्तात्रय गेनभाऊ गाडगे (निमगाव सावा, पाईनमळा)</p>
+    <p><b>चुलते</b><br>शिवाजी अनंथा डेरे (पाडळी आळे)<br>ज्ञानदेव अनंथा डेरे (पाडळी आळे)<br>जीजाभाऊ अनंथा डेरे (पाडळी आळे)<br>अंबर अनंथा डेरे (पाडळी आळे)</p>
+    <p><b>काका</b><br>दशरथ औटी (राजुरी)<br>रामदास भोर (रांजणी)</p>  
+    <p><b>नातेवाईक</b><br>साबळे, भोर, गाडगे, बेलोटे, थोरात, चौधरी, हाडवळे, आतकरी<br>गुंजाळ, शिरोळे, नरवडे, निचित, औटी, अवारी</p>
     <p><img class="whatsapp-icon" [src]=whatsappPath alt="Loadding..." (click)="openwhastapp()"><b>  संपर्क क्रमांक</b><br>८९२८२८५०७२</p>
 </div>
 <br>
 <div class="personal-content">
     <u><h3>वैयक्तिक माहिती</h3></u>
-    <p><b>लिंग : </b>पुरुष</p>
-    <p><b>वय : </b>३०</p>
     <p><b>धर्म : </b>हिंदू</p>
-    <p><b>उंची : </b>5 फूट 10 इंच</p>
+    <p><b>लिंग : </b>पुरुष</p>
+    <p><b>उंची : </b>5 फूट 9 इंच</p>
     <p><b>शिक्षण क्षेत्र : </b>विज्ञान</p>
     <p><b>भावंड : </b>धाकटी बहीण</p>
     <p><b>कुटुंबासह रहातो : </b>होय</p>
-    <p><b>आहार  : </b>अधूनमधून मांसाहारी</p>
     <p><b>वैवाहिक स्थिती : </b>अविवाहित</p>
+    <p><b>आहार  : </b>अधूनमधून मांसाहारी</p>
     <p><b>Work As : </b>Senior Software Engineer</p>
+    <p><b>Salary : </b>&#8377; 1,43,000/- Per Month</p>
+    <!-- <p><b>वय : </b>{{ gtmyage() | lowercase }}</p -->
+    <p><b>Age : {{ updateLiveValue() }} </b></p>
 </div>
 <br>
 <div class="kundali-content">
@@ -47,6 +51,7 @@
     <p><b>रास : </b>मकर</p>
     <p><b>नाडी : </b>अंत्या</p>
     <p><b>नक्षत्र : </b>श्रावण</p>
+    <p><b>देवक : </b>पाच पाली</p>
     <p><b>जन्मतारीख : </b>५ जुलै १९९३</p>
     <p><b>जन्मस्थान : </b>मुंबई</p>
     <p><b>जन्म तास : </b>२२ तास</p>
